# AppBaBa

./: .env.production.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260325_0001_initial_schema.py  20260325_0002_gameplay_fields_and_events.py  20260328_0003_live_match_operation.py  20260331_0004_session_workflow_and_extended_stats.py  20260331_0005_player_status_and_attribute_fields.py  20260331_0006_match_bracket_slots_and_strength_fields.py  20260331_0007_session_highlights.py  20260331_0008_rotation_flow_for_four_team_sessions.py  20260331_0009_session_closure_highlight_expansion.py  20260331_0010_match_clock_state.py  20260401_0011_session_summaries.py  20260425_0012_password_reset_token_expires_at.py  20260425_0013_users_last_seen_at.py  20260426_0013_user_last_seen_at.py
backend/app/: bootstrap.py  live.py  main.py
backend/app/api/: deps.py  router.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  billing.py  enums.py  highlight.py  league.py  match.py  mixins.py  player.py  session.py  session_summary.py  user.py
backend/app/schemas/: analytics.py  auth.py  billing.py  common.py  highlight.py  league.py  league_resolution.py  live.py  match.py  player.py  session.py  session_summary.py
backend/app/services/: billing.py  draw.py  email.py  highlights.py  leagues.py  matches.py  ranking.py  sessions.py  (+2 more)
(+120 files in other folders)
